quick sort logic added

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 </head>
 <body>
     <div class="ioContainer">
+        <h1 id="quicky">Quick sort</h1>
         <img src="assets/quick.png" id="quick_image" alt="quick">
         <br>
         <h3 id="message">Enter the numbers to be sorted </h3>
         <h3 id="message">e.g 10 8 3 6 9 2</h3>
         <input type="text" id="iterations" placeholder="Enter the numbers">
         <button id="generate">sort</button>
-        <div class="output" id="output"></div>
+        <p class="output" id="output"></p>
     </div>
+    <script src="src/index.js"></script>
 </body>
 </html>
