renamed index.js to quicksort.js

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         <button id="generate">sort</button>
         <p class="output" id="output"></p>
     </div>
-    <script src="src/index.js"></script>
+    <script src="src/quicksort.js"></script>
 </body>
 </html>
