added enter event

--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
         <p class="output" id="output"></p>
     </div>
     <script src="src/quicksort.js"></script>
+    <script src="src/index.js"></script>
 </body>
 </html>
